feat: 正式版本1.0，仅做集群观察，未集成容错策略